# zigpy-showcase

./: .gitignore  README.md  build.py  pyproject.toml
zigpy/: proto_zig.py
zigpy/mzig/: .gitignore  build.zig  build.zig.zon  octree.pyi  octree.pyx
zigpy/mzig/src/: octree.h  octree.root.zig
zigpy/mzig/src/multiblock/: LBM.zig  octree.zig
